--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation "androidx.browser:browser:1.3.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.6'
-
+    implementation 'com.android.volley:volley:1.1.1'
 //    implementation 'com.github.iammert:ReadableBottomBar:0.2'
 }
